// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> renders 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_1"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="field_1"
  />
</div>
`;

exports[`<Field /> renders with a custom ID 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="foo"
  >
    Jawn
  </label>
  <input
    class="field__input"
    id="foo"
  />
</div>
`;

exports[`<Field /> renders with an error 1`] = `
<div
  class="field field--erroneous"
>
  <label
    class="field__label field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Jawn
  </label>
  <input
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--erroneous"
    id="field_4"
  />
  <span
    class="message message--problem"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<Field /> renders with help 1`] = `
<div
  class="field"
>
  <label
    class="field__label"
    for="field_5"
  >
    Jawn
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
  <input
    class="field__input"
    id="field_5"
  />
</div>
`;

exports[`<Field /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <input
    class="field__input field__input--inline"
    id="field_10"
  />
  <label
    class="field__label field__label--inline"
    for="field_10"
  >
    Jawn
  </label>
</div>
`;

exports[`<Field /> renders with large 1`] = `
<div
  class="field field--large"
>
  <label
    class="field__label field__label--large"
    for="field_8"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--large"
    id="field_8"
  />
</div>
`;

exports[`<Field /> renders with small 1`] = `
<div
  class="field field--small"
>
  <label
    class="field__label field__label--small"
    for="field_9"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--small"
    id="field_9"
  />
</div>
`;

exports[`<Field /> renders with success 1`] = `
<div
  class="field field--success"
>
  <label
    class="field__label field__label--success"
    for="field_6"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--success"
    id="field_6"
  />
</div>
`;

exports[`<Field /> renders with touched 1`] = `
<div
  class="field field--touched field--success"
>
  <label
    class="field__label field__label--touched field__label--success"
    for="field_7"
  >
    Jawn
  </label>
  <input
    class="field__input field__input--touched field__input--success"
    id="field_7"
  />
</div>
`;

exports[`<Field /> renders without a label 1`] = `
<div
  class="field"
>
  <input
    class="field__input"
    id="field_2"
  />
</div>
`;

exports[`<Field /> renders without a wrapper 1`] = `
<input
  class="field__input"
  id="field_3"
/>
`;
